Cambios esteticos, prueba Angular Material

--- a/angularapp/index.html
+++ b/angularapp/index.html
@@ -9,8 +9,10 @@
     <link rel="icon" type="image/x-icon" href="./favicon.ico" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="styles.14c903352bb6d17f2063.css"></head>
-  <body>
+      <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link rel="stylesheet" href="styles.46b12db68274142aad9e.css"></head>
+  <body class="mat-typography">
     <app-root></app-root>
-  <script src="runtime-es2015.008feb838114ee1b0ce8.js" type="module"></script><script src="runtime-es5.008feb838114ee1b0ce8.js" nomodule defer></script><script src="polyfills-es5.a6ed7c7eb04035c7b8e0.js" nomodule defer></script><script src="polyfills-es2015.763db5068a3988f987a3.js" type="module"></script><script src="main-es2015.cb62ee0a6d9e27c4b01a.js" type="module"></script><script src="main-es5.cb62ee0a6d9e27c4b01a.js" nomodule defer></script></body>
+  <script src="runtime-es2015.008feb838114ee1b0ce8.js" type="module"></script><script src="runtime-es5.008feb838114ee1b0ce8.js" nomodule defer></script><script src="polyfills-es5.a6ed7c7eb04035c7b8e0.js" nomodule defer></script><script src="polyfills-es2015.763db5068a3988f987a3.js" type="module"></script><script src="main-es2015.da51c9559bcb490b8c10.js" type="module"></script><script src="main-es5.da51c9559bcb490b8c10.js" nomodule defer></script></body>
 </html>
